--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "3.10.0",
     "@reduxjs/toolkit": "2.5.0",
     "@tanstack/react-query": "5.64.1",
     "axios": "1.7.9",
@@ -18,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "7.54.2",
+    "react-hot-toast": "2.5.1",
     "react-modal": "3.16.3",
     "react-redux": "9.2.0",
     "react-router-dom": "7.1.1",
@@ -30,6 +32,7 @@
     "@types/node": "22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-modal": "3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "10.4.20",
     "eslint": "^9.17.0",
